--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
           <link href="MainStyle.css" rel="stylesheet" type="text/css">
           <meta content="Ed Kay" name="author">
           <meta content="DinoBoss is a video game development studio specialising in visceral, atmospheric and emergent experiences, which sometimes involve throwing goats off mountains." name="description">
-          <meta content="dino boss, dinoboss, hang line, hangline, line hang, climbing game, mountain climbing, grapple game, swinging, grappling hook, mountain, action game, mobile game, puzzle game, goats, avalanches, falling rocks, physics game, iPhone game, Android game" name="keywords">
+          <meta content="Demon Spore, indie developer, action roguelike, hang line, mountain climbing game" name="keywords">
           <!-- FB -->
           <meta property="og:title" content="DinoBoss">
           <meta property="og:type" content="website">
