--- a/ContactFormTEST.html
+++ b/ContactFormTEST.html
@@ -24,7 +24,7 @@
 
 
 	<form id="contact-form" enctype="text/plain"
-	  action="https://docs.google.com/forms/d/e/1FAIpQLSf6z1yJZZ3-aPPU_YbLIUnCfn171lRx6CiT8Gj_cXEjf-0KLg/formResponse">
+	  action="https://docs.google.com/forms/d/e/1FAIpQLSf6z1yJZZ3-aPPU_YbLIUnCfn171lRx6CiT8Gj_cXEjf-0KLg/formResponse"  target="hidden_iframe" onsubmit="submitted=true;">
 		<br>
 	    <label for="entry.1210582692">Name<br></label>
 	    <input type="text" name="entry.1210582692" class="text"
@@ -53,6 +53,8 @@
 			</button>
 	  <br><br>
 	</form>
+	
+	<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
 
 		<h4><p id="FormSubmissionText"></p></h4>
 
