--- a/ContactFormTEST.html
+++ b/ContactFormTEST.html
@@ -22,16 +22,17 @@
 
 	Use the following form to send a message.</p><br>
 
+  <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
 
 	<form id="contact-form" enctype="text/plain"
-	  action="https://docs.google.com/forms/d/e/1FAIpQLSf6z1yJZZ3-aPPU_YbLIUnCfn171lRx6CiT8Gj_cXEjf-0KLg/formResponse"  target="hidden_iframe" onsubmit="return onFormSubmission();">
+	  action="https://docs.google.com/forms/d/e/1FAIpQLSdGVXy9Ac8cfWzfY-0cVLbzO7QrXrsJPfObl6NknUW5J2t19g/formResponse"  target="hidden_iframe" onsubmit="submitForm(event);">
 		<br>
-	    <label for="entry.1210582692">Name<br></label>
-	    <input type="text" name="entry.1210582692" class="text"
+	    <label for="entry.1032019492">Name<br></label>
+	    <input type="text" name="entry.1032019492" class="text"
 	      placeholder="Enter your name..." value="" required />
 	  <br><br>
-	    <label for="entry.92797013">E-mail Address<br></label>
-	    <input type="email" name="entry.92797013" class="text"
+	    <label for="entry.872484232">E-mail Address<br></label>
+	    <input type="email" name="entry.872484232" class="text"
 	      placeholder="Enter your email address..." value="" required />
 	  <br><br>
 	    <label for="entry.653295125">Message<br></label>
@@ -46,55 +47,39 @@
 					</textarea>
 	  <br><br>
 
-			<button class="g-recaptcha"
-        data-sitekey="6Lf2X4YgAAAAAL9VQl6j4rnesIgcQaENb6jmCUg0"
-        data-callback='onSubmit'
-        data-action='submit'>Submit
-			</button>
+		  <input id="google-recaptcha" type="hidden" name="entry.66391034" value="" />
+
+	    <input id="button-submit" type="submit" value="Submit" disabled />
+
 	  <br><br>
 	</form>
 
-	<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+	<h4><p id="contact-success"></p></h4>
 
-		<h4><p id="FormSubmissionText"></p></h4>
-
-	<div id="contact-success"></div>
-
-		<script src="https://www.google.com/recaptcha/api.js?render=6Lf2X4YgAAAAAL9VQl6j4rnesIgcQaENb6jmCUg0"></script>
 
   <!-- NOTE: It's critically important where the script is put. The 'FormSubmissionText' element has to appear before this script -->
+<script src="https://www.google.com/recaptcha/api.js?render=6Lf2X4YgAAAAAL9VQl6j4rnesIgcQaENb6jmCUg0"></script>
+
 	<script type="text/javascript">
+	  grecaptcha.ready(function() {
+	    grecaptcha.execute('6Lf2X4YgAAAAAL9VQl6j4rnesIgcQaENb6jmCUg0', {action: 'contact_form'})
+	    .then(function(token) {
+	      // copy recaptcha response to hidden input
+	      document.getElementById('google-recaptcha').value = token;
+	      // enable form submit
+	      document.getElementById('button-submit').disabled = false;
+	    });
+	  });
 
-	   function onSubmit(token)
-		 {
-	     document.getElementById("contact-form").submit();
-	   }
+	  function submitForm(e) {
+	    var msg = 'Thanks for getting in touch!!!';
 
-		     function onClick(e)
-		  		 {
-		         e.preventDefault();
-		         grecaptcha.ready(function()
-		 				{
-		           grecaptcha.execute('6Lf2X4YgAAAAAL9VQl6j4rnesIgcQaENb6jmCUg0', {action: 'submit'}).then(function(token) {
-		               // Add your logic to submit to your backend server here.
-		  						 var msg = 'Thanks for your message.';
-
-		  							document.getElementById('contact-form').style.display = "none";
-		  							document.getElementById('contact-success').innerHTML = msg;
-		         });
-		       });
-		 		}
-
-		function onFormSubmission()
-		{
-			  document.getElementById("FormSubmissionText").innerHTML = "Thanks for getting in touch!";
-				fade(gform);
-		    /* alert('Form submitted!'); */
-
-				/* IMPORTANT: return true here or it will completely fail to submit the form! */
-		    return true;
-		}
-
+	    // simulate feel of connection with timeout
+	    setTimeout(function() {
+	      document.getElementById('contact-form').style.display = "none";
+	      document.getElementById('contact-success').innerHTML = msg;
+	    }, 300);
+	  }
 	</script>
 
 	<br>
