--- a/ContactFormTEST.html
+++ b/ContactFormTEST.html
@@ -25,7 +25,7 @@
   <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
 
 	<form id="contact-form" enctype="text/plain"
-	  action="https://docs.google.com/forms/d/e/1FAIpQLSdGVXy9Ac8cfWzfY-0cVLbzO7QrXrsJPfObl6NknUW5J2t19g/formResponse"  target="hidden_iframe" onsubmit="submitForm(event);">
+	  action="https://docs.google.com/forms/d/e/1FAIpQLSdGVXy9Ac8cfWzfY-0cVLbzO7QrXrsJPfObl6NknUW5J2t19g/formResponse"  target="hidden_iframe" onsubmit="return onFormSubmission();">
 		<br>
 	    <label for="entry.1032019492">Name<br></label>
 	    <input type="text" name="entry.1032019492" class="text"
@@ -49,7 +49,7 @@
 
 		  <input id="google-recaptcha" type="hidden" name="entry.66391034" value="" />
 
-	    <input id="button-submit" type="submit" value="Submit" data-callback='onSubmit' disabled />
+	    <input id="button-submit" name="SubmitButton" type="submit" value="Submit" disabled />
 
 	  <br><br>
 	</form>
@@ -57,7 +57,7 @@
 	<h4><p id="contact-success"></p></h4>
 
 
-  <!-- NOTE: It's critically important where the script is put. The 'FormSubmissionText' element has to appear before this script -->
+  <!-- NOTE: It's critically important where the script is put. The 'contact-success' element has to appear before this script -->
 <script src="https://www.google.com/recaptcha/api.js?render=6Lf2X4YgAAAAAL9VQl6j4rnesIgcQaENb6jmCUg0"></script>
 
 	<script type="text/javascript">
@@ -68,15 +68,13 @@
 	      document.getElementById('google-recaptcha').value = token;
 	      // enable form submit
 	      document.getElementById('button-submit').disabled = false;
+
+		    alert('Token is: ' + token);
 	    });
 	  });
 
-   function onSubmit(token)
-	 {
-     document.getElementById("contact-form").submit();
-   }
-
-	  function submitForm(e) {
+	  function submitForm(e)
+		{
 	    var msg = 'Thanks for getting in touch!!!';
 
 	    // simulate feel of connection with timeout
@@ -85,6 +83,30 @@
 	      document.getElementById('contact-success').innerHTML = msg;
 	    }, 300);
 	  }
+
+		function fade(element)
+		{
+			var op = 1;  // initial opacity
+			var timer = setInterval(function () {
+					if (op <= 0.1){
+							clearInterval(timer);
+							element.style.display = 'none';
+					}
+					element.style.opacity = op;
+					element.style.filter = 'alpha(opacity=' + op * 100 + ")";
+					op -= op * 0.1;
+			}, 20);
+		}
+
+		function onFormSubmission()
+		{
+			  document.getElementById("contact-success").innerHTML = "Thanks for getting in touch!";
+				fade(contact-form);
+
+				/* IMPORTANT: return true here or it will completely fail to submit the form! */
+		    return true;
+		}
+
 	</script>
 
 	<br>
