--- a/ContactForm.html
+++ b/ContactForm.html
@@ -22,21 +22,22 @@
 
 	Use the following form to send a message.</p><br>
 
+  <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
 
-	<form id="contact-form" enctype="text/plain" onsubmit="submitForm(event);"
-	  action="https://docs.google.com/forms/d/e/1FAIpQLSf6z1yJZZ3-aPPU_YbLIUnCfn171lRx6CiT8Gj_cXEjf-0KLg/formResponse">
+	<form id="contact-form" enctype="text/plain"
+	  action="https://docs.google.com/forms/d/e/1FAIpQLSdGVXy9Ac8cfWzfY-0cVLbzO7QrXrsJPfObl6NknUW5J2t19g/formResponse?"  target="hidden_iframe" onsubmit="return onFormSubmission();">
 		<br>
-	    <label for="entry.1210582692">Name<br></label>
-	    <input type="text" name="entry.1210582692" class="text"
+	    <label for="entry.1032019492">Name<br></label>
+	    <input type="text" name="entry.1032019492" class="text"
 	      placeholder="Enter your name..." value="" required />
 	  <br><br>
-	    <label for="entry.92797013">E-mail Address<br></label>
-	    <input type="email" name="entry.92797013" class="text"
+	    <label for="entry.872484232">E-mail Address<br></label>
+	    <input type="email" name="entry.872484232" class="text"
 	      placeholder="Enter your email address..." value="" required />
 	  <br><br>
-	    <label for="entry.653295125">Message<br></label>
+	    <label for="entry.1481850249">Message<br></label>
 				  <textarea type="text"
-						name="entry.653295125"
+						name="entry.1481850249"
 						rows="12"
 						style="position: relative; width: 90%;"
 						maxlength="1000"
@@ -46,39 +47,66 @@
 					</textarea>
 	  <br><br>
 
-			<button class="g-recaptcha"
-        data-sitekey="6Lf2X4YgAAAAAL9VQl6j4rnesIgcQaENb6jmCUg0"
-        data-callback='onSubmit'
-        data-action='submit'>Submit
-			</button>
+		  <input id="google-recaptcha" type="hidden" name="entry.66391034" value="" />
+
+	    <input id="button-submit" name="SubmitButton" type="submit" value="Submit" disabled />
+
 	  <br><br>
 	</form>
 
-		<h4><p id="FormSubmissionText"></p></h4>
+	<h4><p id="contact-success"></p></h4>
 
-	<div id="contact-success"></div>
 
-<script src="https://www.google.com/recaptcha/api.js"></script>
+  <!-- NOTE: It's critically important where the script is put. The 'contact-success' element has to appear before this script -->
+<script src="https://www.google.com/recaptcha/api.js?render=6Lf2X4YgAAAAAL9VQl6j4rnesIgcQaENb6jmCUg0"></script>
 
-  <!-- NOTE: It's critically important where the script is put. The 'FormSubmissionText' element has to appear before this script -->
 	<script type="text/javascript">
+	  grecaptcha.ready(function() {
+	    grecaptcha.execute('6Lf2X4YgAAAAAL9VQl6j4rnesIgcQaENb6jmCUg0', {action: 'contact_form'})
+	    .then(function(token) {
+	      // copy recaptcha response to hidden input
+	      document.getElementById('google-recaptcha').value = token;
+	      // enable form submit
+	      document.getElementById('button-submit').disabled = false;
 
-	   function onSubmit(token)
-		 {
-	     document.getElementById("contact-form").submit();
-	   }
+		    /* alert('Token is: ' + token); */
+	    });
+	  });
 
 	  function submitForm(e)
 		{
-	    var msg = 'Thanks for getting in touch!';
+	    var msg = 'Thanks for getting in touch!!!';
 
 	    // simulate feel of connection with timeout
-	    setTimeout(function()
-			{
+	    setTimeout(function() {
 	      document.getElementById('contact-form').style.display = "none";
 	      document.getElementById('contact-success').innerHTML = msg;
 	    }, 300);
 	  }
+
+		function fade(element)
+		{
+			var op = 1;  // initial opacity
+			var timer = setInterval(function () {
+					if (op <= 0.1){
+							clearInterval(timer);
+							element.style.display = 'none';
+					}
+					element.style.opacity = op;
+					element.style.filter = 'alpha(opacity=' + op * 100 + ")";
+					op -= op * 0.1;
+			}, 20);
+		}
+
+		function onFormSubmission()
+		{
+			  document.getElementById("contact-success").innerHTML = "Thanks for getting in touch!";
+				fade(document.getElementById('contact-form'));
+
+				/* IMPORTANT: return true here or it will completely fail to submit the form! */
+		    return true;
+		}
+
 	</script>
 
 	<br>
