Updated to new logo and changed colours

--- a/Newsletter.html
+++ b/Newsletter.html
@@ -14,7 +14,7 @@
             <div class="container">
           <h1>NEWSLETTER<img src="Images/WebsiteLineBreak.png"></h1>
 <p>
-  To receive an occasional exciting update on whatever I'm working on, feel free to sign up to the newsletter.</p><br>
+  To receive an occasional exciting update on whatever DinoBoss is working on, feel free to sign up to the newsletter.</p><br>
   <!-- Begin Mailchimp Signup Form -->
   <div id="mc_embed_signup">
     <form action="https://dinoboss.us16.list-manage.com/subscribe/post?u=8008d6262eef4eecd59838cea&amp;id=288cf5fe1c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
