--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
           <img src="Images/WebsiteLineBreak.png">
 <p>
 
-  <br>DinoBoss is a video game development studio specialising in visceral, atmospheric and emergent experiences, which sometimes involve throwing goats off mountains.
+  <br>DinoBoss is a video game development studio specialising in visceral, atmospheric and emergent experiences, which sometimes involve escaping from masses of tentacles.
 <br>
 <br>
-  Instead of using processes, meetings, planning and expert specialists, at DinoBoss games are made by the sheer determination of one man smashing his fists at a keyboard until polygons come raining forth.</p><p><br></p>
+  Instead of using processes, meetings, planning and expert specialists, at DinoBoss games are made by determination, perseverance and smashing fists at keyboards until terrified polygons come raining forth.</p><p><br></p>
 <h2>PROJECTS</h2>
 
 <img src="Images/WebsiteLineBreak.png">
@@ -53,7 +53,7 @@ The current game in development at DinoBoss is Demon Spore.
       <p>Demon Spore is an intense action rogue-like inspired by 80s Monster movies where you have to blast your way through tentacle hell as a failed lab experiment gives birth to a rapidly growing viral horror.</p>
       <br>
 
-      <iframe width="960" height="540" src="https://www.youtube.com/embed/n76jqC1rNPI" title="Demon Spore" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      <iframe width="960" height="540" src="https://www.youtube.com/embed/ce2SSH67xlo" title="Demon Spore" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
       </iframe><br><br>
           <p>Find out more at the <a href="http://www.demonspore.com" title="Hang Line" target="_blank">Demon Spore website</a></p>
             <br><br>
@@ -85,7 +85,7 @@ The first project lovingly created at DinoBoss was goat grappling action game Ha
 <div class="container">
 <h2>WHO DINOBOSS IS<img src="Images/WebsiteLineBreak.png"></h2>
 <h3><br>ED KAY - FOUNDER</h3><img src="Images/ProfileImage.png"></div>
-<div class="container"><br>A 17 year game design veteran, Ed Kay has been dreaming of making his own game since discovering the Doom level editor in 1996. But after a career of headshots, explosions and special moves spanning Cthulhu to Bulletstorm, it wasn't until having his dreams shattered from the Lucasarts apocalypse that he decided it was time to escape AAA console development and enter the terrifying world of indie development. And thus DinoBoss was born.</div>
+<div class="container"><br>A 20 year game design veteran, Ed Kay has been dreaming of making his own game since discovering the Doom level editor in 1996. But after a career of headshots, explosions and special moves spanning Cthulhu to Bulletstorm, it wasn't until having his dreams shattered from the Lucasarts apocalypse that he decided it was time to escape AAA console development and enter the terrifying world of indie development. And thus DinoBoss was born.</div>
 <div class="container"><br>
 <h3>GET IN TOUCH</h3>
     <a target="_top" title="Sign up to Newsletter" href="Newsletter.html">Sign up to Newsletter</a>
