--- a/ContactForm.html
+++ b/ContactForm.html
@@ -49,7 +49,7 @@
 
 		  <input id="google-recaptcha" type="hidden" name="entry.66391034" value="" />
 
-	    <input id="button-submit" name="SubmitButton" type="submit" value="Submit" disabled />
+	    <input id="button-submit" name="SubmitButton" type="submit" class="button" value="Submit" disabled />
 
 	  <br><br>
 	</form>
