tiny wording tweak

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <br>DinoBoss is a video game development studio specialising in visceral, atmospheric and emergent experiences, which sometimes involve escaping from masses of tentacles.
 <br>
 <br>
-  Instead of using processes, meetings, planning and expert specialists, at DinoBoss games are made by determination, perseverance and smashing fists at keyboards until terrified polygons come raining forth.</p><p><br></p>
+  Instead of using processes, meetings and careful planning, at DinoBoss games are made by determination, perseverance and smashing fists at keyboards until terrified polygons come raining forth.</p><p><br></p>
 <h2>PROJECTS</h2>
 
 <img src="Images/WebsiteLineBreak.png">
